# warehouse-billing

./: Dockerfile  README.md  docker-compose.yml  nginx.conf
backend/: .env.example  .env.prod  .gitignore  AGENTS.md  Makefile  alembic.ini  entrypoint.sh  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 4b078a0871f7_remove_columns.py  6676dc7128f4_update_geo_group_id.py  7daa00be91d2_init.py  83d127211428_template_rule.py  84d152eb5b27_remove_version.py  86d476979c63_add_geo_group.py  9fb96aadca3b_seed_business_domains.py  ca454c4877c4_update_group_ids_to_group_id.py  e7f5ac0f5ab9_update_billing_template.py  ffb2e5806944_add_regions.py
backend/docs/: billing-backend-dev.md  carrier-service-tariff-snapshot-payload-schema.json  carrier-service-tariff-snapshot-payload.md  customer-management-dev.md  customer-management-er.md  dingtalk-auth-dev.md  dingtalk-qr-login.md  multi-database-dev.md
backend/scripts/: check_connections.py  clear_caches.sh  log.sh  migration.sh
backend/src/: main.py
backend/src/application/auth/: __init__.py  container.py  exceptions.py  qr_login_service.py  services.py  use_cases.py
backend/src/application/billing/: __init__.py  commands.py  use_cases.py
backend/src/application/carrier/: commands.py  exceptions.py  use_cases.py
backend/src/application/customer/: commands.py  exceptions.py  group_commands.py  use_cases.py
backend/src/application/region/: __init__.py  commands.py  use_cases.py
backend/src/domain/billing/: entities.py
backend/src/domain/customer/: __init__.py  entities.py  services.py
backend/src/intrastructure/: __init__.py
backend/src/intrastructure/auth/: __init__.py  dingtalk_gateway.py  token_service.py
backend/src/intrastructure/cache/: __init__.py  dingtalk_qr_state.py  redis.py
backend/src/intrastructure/clients/: dingtalk_client.py
backend/src/intrastructure/database/: __init__.py  mysql_external.py  postgres.py
backend/src/intrastructure/database/models/: __init__.py  base.py  billing.py  carrier.py  company.py  customer.py  domain.py  region.py  sync.py
backend/src/intrastructure/repositories/: __init__.py  base.py  billing_quote_repository.py  billing_template_repository.py  carrier_repository.py  company_repository.py  customer_group_repository.py  customer_repository.py  external_company_repository.py  region_repository.py
backend/src/presentation/api/: __init__.py  auth.py  customers.py  health.py
backend/src/presentation/api/v1/: __init__.py  auth.py  billing_templates.py  carriers.py  customers.py  regions.py
backend/src/presentation/dependencies/: __init__.py  auth.py  billing.py  carrier.py  customer.py  region.py
backend/src/presentation/schema/: base.py  billing.py  carrier.py  customer.py  region.py
backend/src/shared/config/: __init__.py  auth_config.py  cors_config.py  database_config.py  log_config.py
backend/src/shared/constants/: error_code.py  error_message.py
backend/src/shared/context/: __init__.py  request_context.py
backend/src/shared/error/: app_error.py  handle.py
backend/src/shared/logger/: __init__.py  factories.py  formatters.py  middlewares.py  setup_utils.py
backend/src/shared/middlewares/: cors.py  exception.py
backend/src/shared/models/: __init__.py  user.py
backend/src/shared/schemas/: auth.py  response.py
backend/src/shared/utils/: __init__.py  datetime.py  logger.py  random.py
docs/: 计费需求.md
frontend/: .env.production  .eslintrc.js  AGENTS.md  Makefile  TODO_mui_to_tailwind.md  components.json  (+5 more)
(+121 files in other folders)
